--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="favicon.png">
-    <title>new Tech Edu</title>
+    <title>НОТ</title>
   </head>
   <body>
     <noscript>
